# nju-cli

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.agents/skills/add-new-api/: SKILL.md
.agents/skills/site-authentication/: SKILL.md
.github/workflows/: release.yml
crates/academic-affairs/: Cargo.toml  README.md
crates/academic-affairs/src/: article.rs  calendar.rs  download.rs  lib.rs
crates/asset-management/: Cargo.toml
crates/asset-management/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: academic_affairs.rs  asset_management.rs  auth.rs  ehall.rs  exchange_system.rs  graduate_admission.rs  itsc.rs  main.rs  scit.rs  venue.rs  youth_league.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  read_html.rs  unified_auth.rs
crates/common/tests/: read_html.rs  unified_auth.rs
crates/d4ocr-rust/: README.md
crates/d4ocr-rust/src/: charset.rs  pipeline.rs
crates/ehall/: Cargo.toml
crates/ehall/src/: course_schedule.rs  grade_query.rs  lib.rs  my_course_schedule.rs  training_program.rs
crates/exchange-system/: Cargo.toml
crates/exchange-system/src/: lib.rs
crates/graduate-admission/: Cargo.toml
crates/graduate-admission/src/: lib.rs
crates/itsc/: Cargo.toml
crates/itsc/src/: lib.rs
crates/my-workspace-hack/: Cargo.toml
crates/scit/: Cargo.toml
crates/scit/src/: lib.rs
crates/venue/: Cargo.toml
crates/venue/src/: crypto.rs  http.rs  lib.rs  model.rs
crates/youth-league/: Cargo.toml
crates/youth-league/src/: lib.rs
nju-cli-skills/: SKILL.md
nju-cli-skills/subcommands/: academic-affairs.md  asset-management.md  ehall.md  graduate-admission.md  itsc.md  scit.md  venue.md
