[package]
name = "asset-management"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
common = { path = "../common" }
reqwest = { workspace = true, features = ["json"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
