[package]
name = "cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "nju-cli"
path = "src/main.rs"

[dependencies]
academic-affairs = { path = "../academic-affairs" }
anyhow = "1"
common = { path = "../common" }
ehall = { path = "../ehall" }
exchange-system = { path = "../exchange-system" }
clap = { version = "4", features = ["derive"] }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
platform-dirs = "0.3"
reqwest = { workspace = true, features = ["cookies", "json"] }
sanitize-filename = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
