[package]
name = "cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "nju-cli"
path = "src/main.rs"

[dependencies]
academic-affairs = { path = "../academic-affairs" }
anyhow = "1"
common = { path = "../common" }
ehall = { path = "../ehall" }
exchange-system = { path = "../exchange-system" }
itsc = { path = "../itsc" }
venue = { path = "../venue" }
youth-league = { path = "../youth-league" }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ddddocr = { git = "https://github.com/nju-cli/ddddocr.git", branch = "master", default-features = false, features = ["inline-model", "download-binaries"] }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
platform-dirs = "0.3"
reqwest = { workspace = true, features = ["cookies", "json"] }
sanitize-filename = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
