[package]
name = "common"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = "1"
html-to-markdown-rs = "3.6.0-rc.12"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
regex = "1"
reqwest = { version = "0.12" }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
